@@ -10,6 +10,7 @@ OBJ            = demo.o
 #MCU_TARGET     = atmega128
 #MCU_TARGET     = atmega1280
 #MCU_TARGET     = atmega1281
+#MCU_TARGET     = atmega1284p
 #MCU_TARGET     = atmega16
 #MCU_TARGET     = atmega163
 #MCU_TARGET     = atmega164p
@@ -18,6 +19,8 @@ OBJ            = demo.o
 #MCU_TARGET     = atmega168
 #MCU_TARGET     = atmega169
 #MCU_TARGET     = atmega169p
+#MCU_TARGET     = atmega2560
+#MCU_TARGET     = atmega2561
 #MCU_TARGET     = atmega32
 #MCU_TARGET     = atmega324p
 #MCU_TARGET     = atmega325
