@@ -1,3 +1,9 @@
+2008-03-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/examples/demo/iocompat.h: Add support for ATmega1284P,
+	ATmega2560, and ATmega2561.
+	* doc/examples/demo/Makefile: (Ditto.)
+
 2008-03-17  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	Fix for bug #22390.
